# mirts-bench

./: .gitignore  README.md  pyproject.toml
examples/: echo_llm.py  kaggle_bridge_server.py  result.json  state_example.json
mirts_bench/: __init__.py  elo.py
mirts_bench/llm/: http.py  kaggle_bridge.py  mock.py
polybench/: __init__.py
polytopia_bench/: __init__.py  benchmark.py  cli.py  prompt.py  schema.py
polytopia_bench/adapters/: __init__.py  base.py  manual.py  ui_automation.py
polytopia_bench/llm/: __init__.py  command.py
