[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polytopia-bench"
version = "0.1.0"
description = "Polytopia LLM Benchmark"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["polytopia", "benchmark", "llm"]

[project.scripts]
polybench = "polytopia_bench.cli:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["polytopia_bench*", "polybench*"]
